# fake_server

./: Cargo.toml  ca-cert.pem  ca-key.pem  ca-req.csr
src/: app.rs  configuration.rs  main.rs
src/handlers/: watcher.rs
