[package]
name = "fake"
version = "0.1.0"
authors = ["Cangsong WANG <cwang40@slb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "2.0", features = ["openssl"] }
openssl = { version = "0.10", features = ["v110"] }
actix = "0.9"
actix-rt = "1.0"
serde = "1.0"
serde_yaml = "0.8"
chrono = "0.4"
futures = "0.3"
env_logger="0.7"
structopt = "0.3"
